syntax = "proto3";

option csharp_namespace = "TransportCompany.GrpcServer";

service TransportCompany {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc GetAllTrips (Empty) returns (TripsReply);
  rpc ReserveSeats (ReserveSeatsRequest) returns (ReserveSeatsReply);
  // poți adăuga alte metode după nevoie
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  int32 employeeId = 1;
  string username = 2;
}


message Empty {}

message Trip {
  int32 id = 1;
  string destination = 2;
  string date = 3;
  string time = 4;
  int32 availableSeats = 5;
}

message TripsReply {
  repeated Trip trips = 1;
}

message ReserveSeatsRequest {
  string clientName = 1;
  repeated int32 seatNumbers = 2;
  Trip trip = 3;
  int32 employeeId = 4;
}

message ReserveSeatsReply {
  bool success = 1;
  string message = 2;
}